<package>
  <name>depthcloud_encoder</name>
  <version>0.0.4</version>
  <description>Point Cloud Encoder for Web-Based Streaming</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="jkammerl@willowgarage.com">Julius Kammer</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/depthcloud_encoder</url>
  <url type="bugtracker">https://github.com/RobotWebTools/depthcloud_encoder/issues</url>
  <url type="repository">https://github.com/RobotWebTools/depthcloud_encoder</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
