<package>
    <name>depthcloud_launch</name>
    <version>0.0.2</version>
    <description>
        Server tools to 
    </description>
    <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
    <author email="jkammerl@willowgarage.com">Julius Kammerl</author>
    <license>BSD</license>  
    <url>http://ros.org/wiki/depthcloudjs</url>
    
    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>depthcloud_encoder</run_depend>
    <run_depend>depthcloud_www</run_depend>
    <run_depend>ros_web_video</run_depend>
    <run_depend>openni_launch</run_depend>
    <run_depend>rosbridge_server</run_depend>
    
</package>
