<package>
  <name>depthcloud_www</name>
  <description>
     HTML files to render pointclouds within the web browser
  </description>
  <version>0.0.2</version>
  <author>Julius Kammerl</author>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/depthcloudjs</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>

