<package>
    <name>depthcloudjs</name>
    <version>0.0.2</version>
    <description>
       Depthcloudjs meta package
    </description>
    <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
    <author email="jkammerl@willowgarage.com">Julius Kammerl</author>
    <license>BSD</license>  
    <url>http://ros.org/wiki/depthcloudjs</url>
    
    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>depthcloud_encoder</run_depend>
    <run_depend>depthcloud_www</run_depend>
    <run_depend>depthcloud_launch</run_depend>
    
    <export>
        <metapackage/>
    </export>
</package>
