<package>
  <name>pointcloud_image_streamer</name>
  <description>
     Image streaming node that generates the source image data used to
     render pointcloud in WebGL
  </description>
  <version>0.0.1</version>
  <author>Julius Kammerl</author>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <license>BSD</license>
  <review status="unreviewed" notes=""/>
  <url>http://ros.org/wiki/http_video_streamer</url>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
</package>

